Add filtering for route summary on actuator endpoint (#199)
* Add filtering for route summary on actuator endpoint

* Change routes endpoint naming. Remove unused function from http health check.

* Use toList instead of collector